--- a/CSS/main.css
+++ b/CSS/main.css
@@ -95,7 +95,7 @@ body {
     width: calc(100% - 30px);
 }
 
-/* Hamburger button - MEJORADO */
+/* Hamburger button */
 .hamburger {
     display: none;
     flex-direction: column;
